[package]
name = "ibox"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# This is my fork of crossterm to make crossterm::cursor::position()
# Read from stderr rather than stdout on unix systems.
# This is not a proper fix for the issue, but it's a workaround.
# I may file an issue to the crossterm repo to add a proper fix.
crossterm = { git = "https://github.com/Vonr/crossterm" }
